# -cc_azprune

./: .gitignore  AZURE_CLEANUP_GUIDE.md  LICENSE  README.md  pyproject.toml  run.bat
.claude/sounds/: .current_session
docs/: HANDOVER.md  PRD.md
src/cc_azprune/: __init__.py  app.py  costs.py  exporter.py  logging_config.py  portal_links.py  resource_info.py  scanner.py
src/cc_azprune/detectors/: __init__.py  api_connection.py  app_gateway.py  app_service_plan.py  availability_set.py  certificate.py  ddos_plan.py  disk.py  frontdoor_waf.py  ip_group.py  load_balancer.py  nat_gateway.py  nic.py  nsg.py  private_dns.py  private_endpoint.py  public_ip.py  resource_group.py  route_table.py  sql_elastic_pool.py  traffic_manager.py  vm.py  vnet_gateway.py
