[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cc_azprune"
version = "1.0.0"
description = "Azure Orphaned Resource Finder - Desktop app to identify unused Azure resources"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Soren Frederiksen", email = "soren@centerconsultinginc.com" }
]
keywords = ["azure", "cloud", "cost-optimization", "devops", "finops"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Systems Administration",
]

dependencies = [
    "customtkinter>=5.2.0",
    "azure-identity>=1.15.0",
    "azure-mgmt-resourcegraph>=8.0.0",
    "azure-mgmt-subscription>=3.1.0",
    "openpyxl>=3.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pyinstaller>=6.0.0",
]

[project.scripts]
cc_azprune = "cc_azprune.app:main"

[project.gui-scripts]
cc_azprune-gui = "cc_azprune.app:main"

[project.urls]
Homepage = "https://github.com/CenterConsultingInc/cc_azprune"
Repository = "https://github.com/CenterConsultingInc/cc_azprune"
Issues = "https://github.com/CenterConsultingInc/cc_azprune/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/cc_azprune"]
